--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>NWT Bodoni</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
-
-    <!-- добавить фавикон -->
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    
+  </body>
 </html>
